added service file and src to index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    
     <script src="app/app.module.js"></script>
     <script src="app/app.controller.js"></script>
+    <script src="app/app.service.js"></script>
 </head>
 <body ng-app="app" ng-controller="appController">
 <div class="col-md-8 col-md-offset-2">
