--- a/index.html
+++ b/index.html
@@ -2,35 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="/">
     <title>AddressBook</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+
     <script src="app/app.module.js"></script>
-    <script src="app/app.controller.js"></script>
     <script src="app/app.service.js"></script>
+    <script src="app/app.config.js"></script>
+    <script src="app/app.controller.js"></script>
+
+    <script src="app/contact/contact.module.js"></script>
+    <script src="app/contact/contact.service.js"></script>
+    <script src="app/contact/contact-list.controller.js"></script>
+    <script src="app/contact/contact-detail.controller.js"></script>
+
+    <script src="app/category/category.module.js"></script>
+    <script src="app/category/category.service.js"></script>
+    <script src="app/category/category-list.controller.js"></script>
+    <script src="app/category/category-detail.controller.js"></script>
 </head>
-<body ng-app="app" ng-controller="appController">
-<div class="col-md-8 col-md-offset-2">
-    <h1 align="center">Addressboken!</h1>
-</div>
+<body ng-app="app">
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <table class="table table-striped text-center">
-                <tr>
-                    <td class="success"><a href="index.html">Home</a></td>
-                    <td><a href="contact.html">Contact</a></td>
-                    <td><a href="contactDetails.html">Contact Details</a></td>
-                    <td><a href="category.html">Category</a></td>
-                    <td><a href="categoryDetails.html">Category Details</a></td>
-                </tr>
-            </table>
-            <img src="pics/queen.jpg" width="725px">
-
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li class=""><a href="/">Home</a></li>
+                    <li><a href="/contacts">Contact</a></li>
+                    <li><a href="/categories">Category</a></li>
+                </ul>
+            </nav>
+            <div ng-view class="col-md-8 col-md-offset-2">
+            </div>
         </div>
     </div>
 </div>
