--- a/app/contact/contact-list.template.html
+++ b/app/contact/contact-list.template.html
@@ -15,7 +15,7 @@
         <td>{{contact.lastname}}</td>
         <td>{{contact.email}}</td>
         <td>{{contact.phone}}</td>
-        <td>{{contact.categoryId}}</td>
+        <td>{{contact.categoryName}}</td>
     </tr>
     </tbody>
 
