--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="app/contact/contact.service.js"></script>
     <script src="app/contact/contact-list.controller.js"></script>
     <script src="app/contact/contact-detail.controller.js"></script>
+    <script src="app/contact/contact-create.controller.js"></script>
 
     <script src="app/category/category.module.js"></script>
     <script src="app/category/category.service.js"></script>
