--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="app/app.service.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.controller.js"></script>
+    
+    <script src="app/login/login.module.js"></script>
+    <script src="app/login/login.controller.js"></script>
 
     <script src="app/contact/contact.module.js"></script>
     <script src="app/contact/contact.service.js"></script>
@@ -27,11 +30,13 @@
     <script src="app/category/category.service.js"></script>
     <script src="app/category/category-list.controller.js"></script>
     <script src="app/category/category-detail.controller.js"></script>
+
+
 </head>
 <body ng-app="app">
 <div class="container">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-1">
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li class=""><a href="/">Home</a></li>
@@ -39,7 +44,7 @@
                     <li><a href="/categories">Category</a></li>
                 </ul>
             </nav>
-            <div ng-view class="col-md-8 col-md-offset-2">
+            <div ng-view class="col-md-6 col-md-offset-1">
             </div>
         </div>
     </div>
