--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -1,5 +1,4 @@
 <h1>Create Contact</h1>
-<div ng-show="saving">Saving contact</div>
 <form>
     <table class="table table-stripped">
         <tr>
@@ -13,4 +12,5 @@
     </table>
     <button class="btn btn-default" ng-click="login()">Login</button>
     <a class="btn btn-default" href="/">Abort</a>
+    <p class="text-danger">{{ text }}</p>
 </form>
