--- a/app/contact/contact-detail.template.html
+++ b/app/contact/contact-detail.template.html
@@ -1,4 +1,5 @@
 <h1>Contact Details</h1>
+<div ng-hide="saving">Saving contact</div>
 <form>
     <table class="table table-stripped">
         <tr>
