--- a/app/contact/contact-list.template.html
+++ b/app/contact/contact-list.template.html
@@ -1,4 +1,5 @@
 <h1>Contacts</h1>
+<div class="">
 <table class="table table-stripped ">
     <thead>
     <tr>
@@ -21,3 +22,4 @@
 
     <a class="btn btn-default pull-right" href="/contact/">Add contact</a>
 </table>
+</div>
